[package]
name = "exhrtcc"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Alexiy Rybin <alexiy.rybin@gmail.com>"]
repository = "https://github.com/tapnisu/exhrtcc/"
description = "CLI tool that can let you view images in terminal"
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
